@@ -2,6 +2,15 @@
 
 	Resynced with GNU Classpath.
 
+	2005-05-02  David Gilbert  <david.gilbert@object-refinery.com>
+
+        * java/text/DecimalFormat.java
+        (hashCode): Reimplemented and added API docs.
+
+2005-05-15  Dalibor Topic  <robilad@kaffe.org>
+
+	Resynced with GNU Classpath.
+
 	2005-04-25  Roman Kennke  <roman@kennke.org>
 
         * javax/swing/plaf/metal/MetalBorders.java:
